Amazon CloudFormation/Creating the VPC in cloudformation template connect to EC2 in Yaml and Json File./vpc-stack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "CloudFormation template to create a VPC and an EC2 instance inside it",
    "Resources": {
      "MyVPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "10.0.0.0/16",
          "EnableDnsSupport": true,
          "EnableDnsHostnames": true,
          "Tags": [
            {
              "Key": "Name",
              "Value": "MyVPC"
            }
          ]
        }
      },
      "MyInternetGateway": {
        "Type": "AWS::EC2::InternetGateway"
      },
      "AttachGateway": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": { "Ref": "MyVPC" },
          "InternetGatewayId": { "Ref": "MyInternetGateway" }
        }
      },
      "MyPublicSubnet": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": { "Ref": "MyVPC" },
          "CidrBlock": "10.0.1.0/24",
          "MapPublicIpOnLaunch": true,
          "AvailabilityZone": { "Fn::Select": [ 0, { "Fn::GetAZs": "" } ] },
          "Tags": [
            {
              "Key": "Name",
              "Value": "MyPublicSubnet"
            }
          ]
        }
      },
      "MyRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": { "Ref": "MyVPC" },
          "Tags": [
            {
              "Key": "Name",
              "Value": "MyRouteTable"
            }
          ]
        }
      },
      "MyRoute": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "AttachGateway",
        "Properties": {
          "RouteTableId": { "Ref": "MyRouteTable" },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": { "Ref": "MyInternetGateway" }
        }
      },
      "MySubnetRouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": { "Ref": "MyPublicSubnet" },
          "RouteTableId": { "Ref": "MyRouteTable" }
        }
      },
      "MySecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Enable SSH access",
          "VpcId": { "Ref": "MyVPC" },
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": 22,
              "ToPort": 22,
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Tags": [
            {
              "Key": "Name",
              "Value": "MySecurityGroup"
            }
          ]
        }
      },
      "MyEC2Instance": {
        "Type": "AWS::EC2::Instance",
        "Properties": {
          "InstanceType": "t2.micro",
          "ImageId": "ami-0c55b159cbfafe1f0",
          "SubnetId": { "Ref": "MyPublicSubnet" },
          "SecurityGroupIds": [
            { "Ref": "MySecurityGroup" }
          ],
          "KeyName": "my-key-pair",
          "Tags": [
            {
              "Key": "Name",
              "Value": "MyEC2Instance"
            }
          ]
        }
      }
    },
    "Outputs": {
      "VPCId": {
        "Description": "VPC ID",
        "Value": { "Ref": "MyVPC" }
      },
      "SubnetId": {
        "Description": "Subnet ID",
        "Value": { "Ref": "MyPublicSubnet" }
      },
      "EC2InstanceId": {
        "Description": "EC2 Instance ID",
        "Value": { "Ref": "MyEC2Instance" }
      }
    }
  }
